# dev-agent-kit

./: .editorconfig  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  README.md  README_en.md  pyproject.toml
agent-source/instructions/: AGENTS.md  markdown.md
agent-source/skills/implementation-plan/: SKILL.md
agent-source/skills/targeted-repository-research/: SKILL.md
docker/: Dockerfile  build-docker.sh  docker-compose.yml  run-docker.sh
scripts/: sync.sh
scripts/pre-commit/: markdown-check.sh  markdown-format.sh  shell-check.sh  shell-format.sh
src/dev_agent_kit/: __init__.py  cli.py  distribution.py
tests/: test_agent_distribution.py  test_smoke.py
