[project]
name = "dev-agent-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[project.scripts]
dev-agent-kit = "dev_agent_kit.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

# === Ruff Configuration ===
[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
# Selected rule groups
select = [
    "E",    # pycodestyle errors (Foundation of Google Style)
    "W",    # pycodestyle warnings
    "F",    # Pyflakes (Detects unused imports/variables)
    "I",    # isort (Ensures consistent import sorting)
    "N",    # pep8-naming (Ensures snake_case/PascalCase compliance)
    "D",    # pydocstyle (Enforces Google-style docstrings)
    "UP",   # pyupgrade (Auto-upgrades to modern Python syntax)
    "B",    # flake8-bugbear (Identifies common design flaws/bugs)
    "SIM",  # flake8-simplify (Prompts for cleaner, simpler code)
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D203", # one-blank-line-before-class
    "D213", # multi-line-summary-second-line
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
# Explicitly enforce Google-style conventions for docstrings
convention = "google"

# === Mypy Configuration ===
[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

# === Pytest Configuration ===
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.uv.build-backend]
module-name = ["dev_agent_kit"]

[[tool.mypy.overrides]]
module = "yfinance"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest", "pytest.*"]
ignore_missing_imports = true

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
